syntax = "proto3";

option go_package = "github.com/restatedev/sdk-go/examples/codegen/proto";

import "dev/restate/sdk/go.proto";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

service Counter {
  option (dev.restate.sdk.go.service_type) = VIRTUAL_OBJECT;
  // Mutate the value
  rpc Add (AddRequest) returns (GetResponse) {}
  // Get the current value
  rpc Get (GetRequest) returns (GetResponse) {
    option (dev.restate.sdk.go.handler_type) = SHARED;
  }
}

service Workflow {
    option (dev.restate.sdk.go.service_type) = WORKFLOW;
    // Execute the workflow
    rpc Run (RunRequest) returns (RunResponse) {}
    // Unblock the workflow
    rpc Finish(FinishRequest) returns (FinishResponse) {}
    // Check the current status
    rpc Status (StatusRequest) returns (StatusResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message AddRequest {
  int64 delta = 1;
}

message GetRequest {}

message GetResponse {
  int64 value = 1;
}

message RunRequest {}

message RunResponse {
  string status = 1;
}

message StatusRequest {}

message StatusResponse {
  string status = 1;
}

message FinishRequest {}

message FinishResponse {}

message Test {
  Test inner = 1;
  string primitive = 2;
  StatusResponse another_inner = 3;
}